cleaned up bootstrap modal

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -47,12 +47,10 @@
         <h3 class="pink"><b>Celebrating 450 years of community on the Hill</b></h3>
         <h3 class="turquoise">30 April Noon – 6pm</h3>
 
-        <p class="text-center">Residents and friends from around the Hill are invited to join in a day of celebration to
-          mark
-          the 450th
-          anniversary of Harrow School. There’s something for everyone and new events are being added to all the time.
-          This
+        <p>Residents and friends from around the Hill are invited to join in a day of celebration to mark the 450th
+          anniversary of Harrow School. There’s something for everyone and new events are being added all the time. This
           information will be updated regularly up until and including Saturday 30 April.</p>
+        <p>You are welcome to come in period costume.</p>
 
         <h3 class="purple">Food Noon to 6pm</h3>
 
@@ -230,7 +228,6 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Send message</button>
             </div>
           </div>
         </div>
