added the extra missing infos

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -113,11 +113,20 @@
           Band Stand.</p>
 
         <p><strong>Toilets</strong><br />
-          Porta Loos can be found in Grove Hill and Harrow Park.</p>
-
+          Portaloos can be found in Grove Hill and Harrow Park.</p>
         <h3 class="green">Road Closures</h3>
         <img src="./assets/road_closures.png">
         <p>Road closures will be in place on Saturday 30 April from 6am to 8pm.</p>
+
+        <p>
+        <ul>
+          <li><strong><span style="color:red">Red Zone:</span></strong> Emergency vehicles and stallholders only.</li>
+          <li><strong><span style="color:orange">Yellow Zone:</span></strong> Entrance and exit with car pass, no access
+            to red zone.</li>
+          <li><strong><span style="color:blue">Blue Zone:</span></strong> Marshalled entry via Middle Road, flow through
+            Byron Hill Road, and exit via London Road for car pass holders all day.</li>
+        </ul>
+        </p>
 
         <p>Residents will be issued, in advance, with a car pass to allow them to access the yellow and blue sections at
           any time during the 24-hour period.</p>
