Added photography content

--- a/450/index.html
+++ b/450/index.html
@@ -416,6 +416,15 @@ Our Ethos of Zero Waste and Zero Hunger is the blueprint to our entire operation
 </details>
 
 <details>
+<summary>Photography Competition</summary>
+<p>Entries are now closed and the winners have been announced.</p>
+<img src="/450/photography1.jpg" width=100% height=auto>
+<p>Junior Winner: Fatima, Year 10</p>
+<img src="/450/photography2.jpeg" width=100% height=auto>
+<p>Senior Winner: Anna, Year 13</p>`
+</details>
+
+<details>
 <summary>Punch and Judy Show and Magician</summary>
 <p>Matthew Garrett is a full time professional magician and is not only a full Member of The Magic Circle but has also reached the highest degree level within the society - Member of The Inner Magic Circle (Less than 300 magicians worldwide reach this). Matthew is a popular choice for high profile events, weddings, and corporate events. <a href="https://www.professionalmagic.com/">www.professionalmagic.com/</a></p>
 <p>🕓 2pm – 5pm</p>
