--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@ layout: default
 
 <p>Welcome to the website for the Harrow School Computer Science Department.</p>
 
-<p><strong>If you are looking for the Harrow and the Hill Community Day website, please <a href="450">click here</a>.</strong></p>
-
 <p>Use the links below to browse the site:</p>
 
 <ul>
     <li><a href="projects">Summer Projects</a></li>
+    <li><a href="revision">Revision Quizzes</a></li>
 </ul>
 
