--- a/timetables/index.html
+++ b/timetables/index.html
@@ -5,7 +5,7 @@ layout: default
 <ul>
 {% for file in site.static_files %}
     {% if file.path contains "/timetables/" and file.extname == ".ics" %}
-		<li><a href="{{ site.baseurl }}{{ file.path }}">file.basename</a></li>
+		<li><a href="{{ site.baseurl }}{{ file.path }}">{{file.basename}}</a></li>
     {% endif %}
 {% endfor %}
 </ul>
