Working on D of E form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ layout: default
 <p>Use the links below to browse the site:</p>
 
 <ul>
-    <li><a href="projects">Summer Projects</a></li>
-    <li><a href="revision">Revision Quizzes</a></li>
+	<li><a href="projects">Summer Projects</a></li>
+	<li><a href="sigma">Sigma Terminal</a></li>
+	<li><a href="mental-maths-challenge">Mental Maths Challenge</a></li>
 </ul>
 
