Added dofe page

--- a/dofe/index.html
+++ b/dofe/index.html
@@ -53,9 +53,9 @@
         <input type="email" id="assessorEmail" name="assessorEmail" required><br><br>
 
         <!-- Submit Button -->
-        <input type="submit" value="Submit">
+        <input type="submit" value="Create Email">
     </form>
-
+    <p><p>
     <footer>
       &copy; Harrow School 2024
     </footer>
