--- a/dofe/index.html
+++ b/dofe/index.html
@@ -28,7 +28,7 @@
         <select id="section" name="section" required>
             <option value="Volunteering">Volunteering</option>
             <option value="Physical">Physical</option>
-            <option value="Skill">Skills</option>
+            <option value="Skill">Skill</option>
         </select><br><br>
 
         <!-- Duration -->
