--- a/dofe/index.html
+++ b/dofe/index.html
@@ -26,9 +26,9 @@
         <!-- Section -->
         <label for="section">Section:</label><br>
         <select id="section" name="section" required>
-            <option value="Volunteering">Volunteering</option>
-            <option value="Physical">Physical</option>
-            <option value="Skill">Skill</option>
+            <option value="volunteering">Volunteering</option>
+            <option value="physical">Physical</option>
+            <option value="skill">Skill</option>
         </select><br><br>
 
         <!-- Duration -->
