--- a/timetables/index.html
+++ b/timetables/index.html
@@ -12,7 +12,10 @@ layout: default
     #timetable-form label {
         margin-right: 10px;
     }
-    
+
+    form {
+        margin-bottom: 20px;
+    }
 </style>
 
 <!-- Form for selecting options -->
