Added maths content

--- a/maths/shell/Autumn 1/2. Factorising with a Common Factor.html
+++ b/maths/shell/Autumn 1/2. Factorising with a Common Factor.html
@@ -146,20 +146,32 @@ window.Quarto = {
       <ul id="quarto-sidebar-section-1" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../Autumn 1/Expanding Brackets.html" class="sidebar-item-text sidebar-link">
+  <a href="../Autumn 1/1. Expanding Brackets.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Expanding Brackets</span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../Autumn 1/Factorising with a Common Factor.html" class="sidebar-item-text sidebar-link active">
+  <a href="../Autumn 1/2. Factorising with a Common Factor.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text">Factorising with a Common Factor</span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../Autumn 1/Linear Equations.html" class="sidebar-item-text sidebar-link">
+  <a href="../Autumn 1/3. Linear Equations.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Linear Equations</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../Autumn 1/4. Fractions.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Fractions</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../Autumn 1/5. Recurring Decimals.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Recurring Decimals</span></a>
   </div>
 </li>
       </ul>
@@ -174,12 +186,14 @@ window.Quarto = {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#example-factorising-with-a-common-factor" id="toc-example-factorising-with-a-common-factor" class="nav-link active" data-scroll-target="#example-factorising-with-a-common-factor">Example: Factorising with a Common Factor</a></li>
+  <li><a href="#learning-objectives" id="toc-learning-objectives" class="nav-link active" data-scroll-target="#learning-objectives">Learning Objectives</a></li>
+  <li><a href="#example-factorising-with-a-common-factor" id="toc-example-factorising-with-a-common-factor" class="nav-link" data-scroll-target="#example-factorising-with-a-common-factor">Example: Factorising with a Common Factor</a></li>
   <li><a href="#example-more-than-one-factor" id="toc-example-more-than-one-factor" class="nav-link" data-scroll-target="#example-more-than-one-factor">Example: More than One Factor</a></li>
   <li><a href="#test-your-understanding" id="toc-test-your-understanding" class="nav-link" data-scroll-target="#test-your-understanding">Test Your Understanding</a></li>
   <li><a href="#answers" id="toc-answers" class="nav-link" data-scroll-target="#answers">Answers</a></li>
+  <li><a href="#exercise" id="toc-exercise" class="nav-link" data-scroll-target="#exercise">Exercise</a></li>
   </ul>
-<div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="Factorising-with-a-Common-Factor.pdf"><i class="bi bi-file-pdf"></i>Beamer</a></li></ul></div></nav>
+<div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="2.-Factorising-with-a-Common-Factor.pdf"><i class="bi bi-file-pdf"></i>Beamer</a></li></ul></div></nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
@@ -203,9 +217,16 @@ window.Quarto = {
 </header>
 
 
+<section id="learning-objectives" class="level2">
+<h2 class="anchored" data-anchor-id="learning-objectives">Learning Objectives</h2>
+<ul>
+<li>Factorise out one or more common factors using a single bracket</li>
+</ul>
+</section>
 <section id="example-factorising-with-a-common-factor" class="level2">
 <h2 class="anchored" data-anchor-id="example-factorising-with-a-common-factor">Example: Factorising with a Common Factor</h2>
-<p>Factorising is the opposite of expanding. There are several method of factorising, but the most basic one involves indentifying <strong>common factors</strong>. For example, in the expression</p>
+<p><a href="https://youtu.be/yIShSwge8bw?si=K04a1yGIjo7JsRfK">Video: Factorising</a></p>
+<p>Factorising is the opposite of expanding. There are several methods of factorising, but the most basic one involves identifying <strong>common factors</strong>. For example, in the expression</p>
 <p><span class="math display">\[
 x^2 - 12x
 \]</span></p>
@@ -238,27 +259,25 @@ Warning
 <h2 class="anchored" data-anchor-id="test-your-understanding">Test Your Understanding</h2>
 <p>Factorise completely:</p>
 <ol type="1">
-<li><span class="math inline">\((3x^2 + 9x)\)</span><br>
-</li>
-<li><span class="math inline">\((14t^2 - 21t^3)\)</span><br>
-</li>
-<li><span class="math inline">\((8y + 28y^3)\)</span><br>
-</li>
-<li><span class="math inline">\((-5h^3 - 40h^7)\)</span></li>
+<li><p><span class="math inline">\((3x^2 + 9x)\)</span></p></li>
+<li><p><span class="math inline">\((14t^2 - 21t^3)\)</span></p></li>
+<li><p><span class="math inline">\((8y + 28y^3)\)</span></p></li>
+<li><p><span class="math inline">\((-5h^3 - 40h^7)\)</span></p></li>
 </ol>
 <hr>
 </section>
 <section id="answers" class="level2">
 <h2 class="anchored" data-anchor-id="answers">Answers</h2>
 <ol type="1">
-<li><span class="math inline">\((3x^2 + 9x) = 3x(x + 3)\)</span><br>
-</li>
-<li><span class="math inline">\((14t^2 - 21t^3) = 7t^2(2 - 3t)\)</span><br>
-</li>
-<li><span class="math inline">\((8y + 28y^3) = 4y(2 + 7y^2)\)</span><br>
-</li>
-<li><span class="math inline">\((-5h^3 - 40h^7) = -5h^3(1 + 8h^4)\)</span></li>
+<li><p><span class="math inline">\((3x^2 + 9x) = 3x(x + 3)\)</span></p></li>
+<li><p><span class="math inline">\((14t^2 - 21t^3) = 7t^2(2 - 3t)\)</span></p></li>
+<li><p><span class="math inline">\((8y + 28y^3) = 4y(2 + 7y^2)\)</span></p></li>
+<li><p><span class="math inline">\((-5h^3 - 40h^7) = -5h^3(1 + 8h^4)\)</span></p></li>
 </ol>
+</section>
+<section id="exercise" class="level2">
+<h2 class="anchored" data-anchor-id="exercise">Exercise</h2>
+<p>Please complete the <a href="https://www.drfrost.org/docs/resources/591/Factorising%20into%20a%20Single%20Bracket%20-%20Exercise.pdf">worksheet</a></p>
 
 
 </section>
