Updating maths content

--- a/maths/shell/index.html
+++ b/maths/shell/index.html
@@ -145,6 +145,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Recurring Decimals</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Autumn 1/6. Percentages.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Percentages</span></a>
+  </div>
+</li>
       </ul>
   </li>
     </ul>
