--- a/maths/shell/Autumn 1/5. Recurring Decimals.html
+++ b/maths/shell/Autumn 1/5. Recurring Decimals.html
@@ -174,6 +174,12 @@ window.Quarto = {
  <span class="menu-text">Recurring Decimals</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../Autumn 1/6. Percentages.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Percentages</span></a>
+  </div>
+</li>
       </ul>
   </li>
     </ul>
@@ -269,25 +275,25 @@ window.Quarto = {
 <h2 class="anchored" data-anchor-id="test-your-understanding">Test Your Understanding</h2>
 <p>Write out what each of these recurring decimals looks like:</p>
 <ol type="1">
-<li><span class="math inline">\(0.\dot{3}\)</span></li>
-<li><span class="math inline">\(0.4\overline{3}\)</span></li>
-<li><span class="math inline">\(0.\dot{4}\dot{3}\)</span></li>
-<li><span class="math inline">\(0.1\overline{23}\)</span></li>
-<li><span class="math inline">\(0.\dot{1}2\dot{3}\)</span></li>
-<li><span class="math inline">\(0.12\overline{3}\)</span></li>
-<li><span class="math inline">\(0.4\dot{3}0\dot{3}\)</span></li>
+<li><p><span class="math inline">\(0.\dot{3}\)</span></p></li>
+<li><p><span class="math inline">\(0.4\overline{3}\)</span></p></li>
+<li><p><span class="math inline">\(0.\dot{4}\dot{3}\)</span></p></li>
+<li><p><span class="math inline">\(0.1\overline{23}\)</span></p></li>
+<li><p><span class="math inline">\(0.\dot{1}2\dot{3}\)</span></p></li>
+<li><p><span class="math inline">\(0.12\overline{3}\)</span></p></li>
+<li><p><span class="math inline">\(0.4\dot{3}0\dot{3}\)</span></p></li>
 </ol>
 </section>
 <section id="answers" class="level2">
 <h2 class="anchored" data-anchor-id="answers">Answers</h2>
 <ol type="1">
-<li><span class="math inline">\(0.\dot{3} = 0.333\ldots\)</span></li>
-<li><span class="math inline">\(0.4\overline{3} = 0.4333\ldots\)</span></li>
-<li><span class="math inline">\(0.\dot{4}\dot{3} = 0.434343\ldots\)</span></li>
-<li><span class="math inline">\(0.1\overline{23} = 0.1232323\ldots\)</span></li>
-<li><span class="math inline">\(0.\dot{1}2\dot{3} = 0.123123123\ldots\)</span></li>
-<li><span class="math inline">\(0.12\overline{3} = 0.12333\ldots\)</span></li>
-<li><span class="math inline">\(0.4\dot{3}0\dot{3} = 0.4303303303\ldots\)</span></li>
+<li><p><span class="math inline">\(0.\dot{3} = 0.333\ldots\)</span></p></li>
+<li><p><span class="math inline">\(0.4\overline{3} = 0.4333\ldots\)</span></p></li>
+<li><p><span class="math inline">\(0.\dot{4}\dot{3} = 0.434343\ldots\)</span></p></li>
+<li><p><span class="math inline">\(0.1\overline{23} = 0.1232323\ldots\)</span></p></li>
+<li><p><span class="math inline">\(0.\dot{1}2\dot{3} = 0.123123123\ldots\)</span></p></li>
+<li><p><span class="math inline">\(0.12\overline{3} = 0.12333\ldots\)</span></p></li>
+<li><p><span class="math inline">\(0.4\dot{3}0\dot{3} = 0.4303303303\ldots\)</span></p></li>
 </ol>
 </section>
 <section id="exercise-1" class="level2">
