--- a/gcse/8. Programming Concepts/3. More on Selection.html
+++ b/gcse/8. Programming Concepts/3. More on Selection.html
@@ -183,6 +183,24 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
  <span class="menu-text">5. Turtles and Loops 2</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../8. Programming Concepts/6. While Loops.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">6. While Loops</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../8. Programming Concepts/7. More While Loops.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">7. More While Loops</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../8. Programming Concepts/8 Menus.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">8. Menus</span></a>
+  </div>
+</li>
       </ul>
   </li>
     </ul>
