--- a/gcse/index.html
+++ b/gcse/index.html
@@ -148,6 +148,18 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">5. Turtles and Loops 2</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./8. Programming Concepts/6. While Loops.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">While Loops</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./8. Programming Concepts/7. More While Loops.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">More While Loops</span></a>
+  </div>
+</li>
       </ul>
   </li>
     </ul>
