--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 
 <h2>Lesson Resources</h2>
 <ul>
-	<li><a href="maths">Computer Science</a></li>
+	<li><a href="cs">Computer Science</a></li>
 	<li><a href="maths">Maths</a></li>
 </ul>
 
