--- a/maths/shell/Autumn 1/1. Expanding Brackets.html
+++ b/maths/shell/Autumn 1/1. Expanding Brackets.html
@@ -548,7 +548,7 @@ Tip
 <h2 class="anchored" data-anchor-id="answers-3">Answers</h2>
 <ol type="1">
 <li><p><span class="math inline">\((x + 2)^3 = x^3 + 6x^2 + 12x + 8\)</span></p></li>
-<li><p><span class="math inline">\((2x + 1)(x - 1)^2 = 2x^3 - x^2 + 1\)</span></p></li>
+<li><p><span class="math inline">\((2x + 1)(x - 1)^2 = 2x^3 - 3x^2 + 1\)</span></p></li>
 <li><p><span class="math inline">\((3 + y)(3 - y)^2 = y^3 - 3y^2 - 9y + 27\)</span></p></li>
 <li><p><span class="math inline">\((a - b x)^3 = a^3 - 3a^2 b x + 3a b^2 x^2 - b^3 x^3\)</span></p></li>
 </ol>
